# lalr1

./: .gitignore  0.bootstrap.js  1.bootstrap.js  Cargo.toml  bootstrap.js  decaf.toml  index.html  readme.md  test.decaf
.github/workflows/: deploy.yml
codegen/: Cargo.toml
common/: Cargo.toml
common/src/: grammar.rs  lib.rs
examples/: calc.toml  decaf.toml
grammar-config/: Cargo.toml
grammar-config/src/: grammar.rs  lib.rs
lalr1/: Cargo.toml
lalr1-core/: Cargo.toml
lalr1-core/examples/: decaf.toml
lalr1-core/pic/: lr1.dot
lalr1-core/src/: conflict.rs  grammar.rs  lalr1_by_lr0.rs  lalr1_by_lr1.rs  lalr1_common.rs  lib.rs  lr0.rs  lr1.rs  mk_table.rs  simple_grammar.rs
lalr1-core/src/lr/src/: lalr1_common.rs  raw_grammar.rs
lalr1-core/tests/: calc.rs
lalr1-macro/: Cargo.toml
lalr1-macro/src/: lib.rs
lalr1/examples/: calc.toml
lalr1/src/: bin.rs  codegen.rs  lib.rs  main.rs
lalr1/src/lr/src/: lib.rs  simple_grammar.rs
lalr1/src/template/: template.rs
ll1-core/: Cargo.toml
ll1-core/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
parse/: Cargo.toml
parser-gen/: Cargo.toml
parser-gen/examples/: calc.toml  calc_cpp.toml  calc_java.toml  parser_gen.rs  simple_grammar.rs
parser-gen/src/: bin.rs  cpp.rs  fmt.rs  java.rs  lib.rs  ll1.rs  parser_gen.rs  rs.rs  show_fsm.rs  show_ll.rs  show_lr.rs  show_tbl.rs  workflow.rs
parser-gen/src/template/: common.rs.template  lalr1.cpp.template  lalr1.java.template  lalr1.rs.template  ll1.rs.template  template.rs
parser-macros/: Cargo.toml
parser-macros/src/: lib.rs
pic/: lalr1.dot  lr0.dot  test.g
src/: abstract_grammar.rs  bitset.rs  codegen.rs  grammar.rs  lalr1.rs  lalr1_by_lr0.rs  lalr1_by_lr1.rs  lib.rs  lr0.rs  lr1.rs  main.rs  parser.rs  printer.rs  raw_grammar.rs  simple_grammar.rs
src/example/: decaf.toml
src/lr/: Cargo.toml
src/lr/src/: grammar.rs  lalr1_by_lr0.rs  lalr1_by_lr1.rs  lr1.rs  printer.rs  raw_grammar.rs
src/template/: template.rs
tests/: Cargo.toml
tests/src/: lalr1.rs  lex.toml  lib.rs  lifetime.rs  literal_string.rs  ll1.rs  test.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
