[package]
name = "lalr1-frontend"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.2"
parser-gen = { git = "https://github.com/MashPlant/lalr1" }
ll1-core = { git = "https://github.com/MashPlant/lalr1" }
lalr1-core = { git = "https://github.com/MashPlant/lalr1" }
common = { git = "https://github.com/MashPlant/lalr1" }
re2dfa = { git = "https://github.com/MashPlant/re2dfa" }
typed-arena = "2.0"

[profile.release]
lto = true
panic = "abort"