[package]
name = "common"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
tools = { git = "https://github.com/MashPlant/tools" }
serde = { version = "*", features = ["derive"] }
indexmap = { version = "*", features = ["serde-1"] }
smallvec = { version = "*", features = ["union"] }