[package]
name = "grammar-config"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
indexmap = { version = "1.0.2", features = ["serde-1"] }
smallvec = { version = "0.6.9", features = ["union"] }
hashbrown = "0.5"