[package]
name = "lalr1-macro"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
syn = { version = "0.15", features = ["extra-traits", "full"] }
proc-macro2 = "0.4"
quote = "0.6"
regex = "1"
lalr1 = { path = "../lalr1" }
re2dfa = { git = "https://github.com/MashPlant/re2dfa" }

[lib]
proc-macro = true