[package]
name = "ll1-core"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
grammar-config = { path = "../grammar-config" }
bitset = { git = "https://github.com/MashPlant/bitset" }
smallvec = { version = "0.6.9", features = ["union"] }
indexmap = { version = "1.0.2", features = ["serde-1"] }
hashbrown = "0.5"