[package]
name = "parser-gen"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
re2dfa = { git = "https://github.com/MashPlant/re2dfa" }
aho-corasick = "0.7"
lalr1-core = { path = "../lalr1-core" }
ll1-core = { path = "../ll1-core" }
grammar-config = { path = "../grammar-config" }
toml = "0.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parsergen"
path = "src/bin.rs"