[package]
name = "parser-gen"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
re2dfa = { git = "https://github.com/MashPlant/re2dfa" }
lalr1-core = { path = "../lalr1-core" }
ll1-core = { path = "../ll1-core" }
common = { path = "../common" }
clap = { version = "2.33.0", optional = true }
toml = { version = "0.5", optional = true }
typed-arena = { version = "2.0", optional = true }

[[example]]
name = "simple_grammar"
required-features = ["clap", "typed-arena"]

[[bin]]
path = "src/parser_gen.rs"
name = "parser_gen"
required-features = ["clap", "toml"]