[package]
name = "parser-macros"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
syn = { version = "1.0", features = ["extra-traits", "full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
lalr1-core = { path = "../lalr1-core" }
ll1-core = { path = "../ll1-core" }
parser-gen = { path = "../parser-gen" }
re2dfa = { git = "https://github.com/MashPlant/re2dfa" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
darling = "0.10"

[lib]
proc-macro = true