[package]
name = "parser-macros"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
syn = "*"
proc-macro2 = { version = "*", features = ["span-locations"] }
quote = "*"
lalr1-core = { path = "../lalr1-core" }
ll1-core = { path = "../ll1-core" }
parser-gen = { path = "../parser-gen" }
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
darling = "*"
typed-arena = "*"

[lib]
proc-macro = true