[package]
name = "lr"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
regex = "1"
smallvec = "0.6.9"